# math-puzzle-rs

./: Cargo.toml  q01.rs  q03.rs
src/: q14.rs  q15.rb  q15.rs  q4.rs
