[package]
name = "math-puzzle"
version = "0.1.0"
authors = ["yagince <straitwalk@gmail.com>"]

[dependencies]
chrono = "0.2"
lazy_static = "0.2.2"

[[bin]]
name = "q01"
doc = false
path = "src/q01.rs"

[[bin]]
name = "q03"
doc = false
path = "src/q03.rs"

[[bin]]
name = "q04"
doc = false
path = "src/q04.rs"

[[bin]]
name = "q05"
doc = false
path = "src/q05.rs"

[[bin]]
name = "q06"
doc = false
path = "src/q06.rs"

[[bin]]
name = "q07"
doc = false
path = "src/q07.rs"

[[bin]]
name = "q10"
doc = false
path = "src/q10.rs"

[[bin]]
name = "q11"
doc = false
path = "src/q11.rs"

[[bin]]
name = "q14"
doc = false
path = "src/q14.rs"

[[bin]]
name = "q15"
doc = false
path = "src/q15.rs"